--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,24 +1,20 @@
 <resources>
-    <!--
-    TODO: Before you run your application, you need a Google Maps API key.
+<!--
+TODO: Before you release your application, you need a Google Maps API key.
 
-    To get one, follow this link, follow the directions and press "Create" at the end:
+To do this, you can either add your release key credentials to your existing
+key, or create a new key.
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=F3:3F:03:CE:0B:AB:D3:23:DC:79:3A:F4:88:E4:73:2E:06:7C:10:8E%3Bcom.crux.bphcfreshers
+Note that this file specifies the API key for the release build target.
+If you have previously set up a key for the debug target with the debug signing certificate,
+you will also need to set up a key for your release certificate.
 
-    You can also add your credentials to an existing key, using these values:
+Follow the directions here:
 
-    Package name:
-    F3:3F:03:CE:0B:AB:D3:23:DC:79:3A:F4:88:E4:73:2E:06:7C:10:8E
+https://developers.google.com/maps/documentation/android/signup
 
-    SHA-1 certificate fingerprint:
-    F3:3F:03:CE:0B:AB:D3:23:DC:79:3A:F4:88:E4:73:2E:06:7C:10:8E
-
-    Alternatively, follow the directions here:
-    https://developers.google.com/maps/documentation/android/start#get-key
-
-    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
-    string in this file.
-    -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBEde5HjQz5Ao1KOncMm7xpdRLSzbj3pms</string>
+Once you have your key (it starts with "AIza"), replace the "google_maps_key"
+string in this file.
+-->
+<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyApRy_X9JNzOQprUmdWfm6LxWUii_--OhI</string>
 </resources>
