--- a/app/src/main/res/layout/activity_clubs.xml
+++ b/app/src/main/res/layout/activity_clubs.xml
@@ -148,7 +148,7 @@
                 android:layout_height="26dp" />
 
             <Button
-                android:id="@+id/button19"
+                android:id="@+id/Bcrux"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttonbg"
