--- a/app/src/main/res/layout/activity_gsigni.xml
+++ b/app/src/main/res/layout/activity_gsigni.xml
@@ -11,12 +11,22 @@
         android:id="@+id/sign_in_button"
         android:layout_width="207dp"
         android:layout_height="57dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="348dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginBottom="326dp"
+        android:layout_marginTop="69dp"
+        android:layout_marginBottom="231dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/indeterminateBar" />
+
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        android:layout_width="217dp"
+        android:layout_height="158dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginBottom="69dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
